# Dash_site

./: README.md  makefile  pyproject.toml
logic/: app.py
logic/pages/: about.py  home.py  projects.py  skills.py
logic/pages/blog_config/: blog.py
logic/pages/blog_config/articles/: 2024-03-15-First-Post.md  2024-03-15-Second-Post.md  2024-03-15-Third-Post.md  2024-03-18-Another-Blog.md  sample.md
logic/pages/layouts/: cards.py  constraints.py
